# mockapi

./: Cargo.toml  Makefile  README.md
public/: index.html
src/: data_provider.rs  handler.rs  main.rs  server.rs  types.rs
