[package]
name = "mockapi"
version = "0.1.0"
authors = ["Marius Ciubotariu <marius.ciubotariu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlify_lambda_http = "0.2"
aws_lambda_events = "0.4"
tokio = { version = "1.0.1", features = ["macros"] }
hyper = "0.14.4"
http = "0.2.1"
url = "2.1.1"

[[bin]]
name = "mockapi"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"